# FinencialAccountingkilocodePR

./: .env  Cargo.toml  README.md  accounting.db  run.sh
migrations/: 001_initial_schema.sql
src/: app_state.rs  lib.rs  main.rs
src/database/: mod.rs
src/handlers/: accounts.rs  mod.rs  reports.rs  transactions.rs  web.rs
src/models/: account.rs  journal_entry.rs  mod.rs  transaction.rs
static/css/: styles.css
static/js/: accounts.js  dashboard.js  reports.js  transactions.js  trial-balance.js
