[package]
name = "financial-accounting"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.32", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Template engine
askama = { version = "0.12", features = ["with-axum"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
# Testing
tokio-test = "0.4"